# neopz-mumps-integration

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.original  OutputCapture.cpp  OutputCapture.h  README.md  firsttest.code-workspace  install.mumps.sh  install.spooles.sh  main.cpp  main.erick-en.cpp  main.marcelo.cpp  main.mumps.cpp  main.original.cpp  main.pardiso.cpp  main_mumps.cpp  main_mumps_3d.cpp  main_mumps_3d_complex.cpp
Matrix/: CMakeLists.txt  TPZSYSMPMumps.cpp  TPZSYSMPMumps.h  TPZSYSMPSpooles.h  TPZYSMPMumps.cpp  TPZYSMPMumps.h  TPZYSMPSpooles.cpp  TPZYSMPSpooles.h
Solvers/: CMakeLists.txt  TPZMumpsSolver.cpp  TPZMumpsSolver.h  TPZSpoolesSolver.h
StrMatrix/: CMakeLists.txt  TPZSSpStructMatrixMumps.cpp  TPZSSpStructMatrixSpooles.h  TPZSpStructMatrixMumps.cpp  TPZSpStructMatrixMumps.h  TPZSpStructMatrixSpooles.cpp  TPZSpStructMatrixSpooles.h
cmake/: EnableMUMPS.cmake  EnableSPOOLES.cmake
docs/: ANALISE_SPEEDUP.md  BUG_REPORT_MUMPS_SYMMETRIC.md  COMO_USAR.md  INDEX.md  MUMPS_INTEGRATION_SUMMARY.md  PROBLEMA_E_SOLUCAO.md  PROJECT_STRUCTURE.md  RESUMO_EXECUTIVO.md  SOLUCAO_COMPLETA.md  benchmark_analysis.csv  benchmark_analysis.html  index.html  solver_performance_results.csv  solver_performance_results.xlsx
neopz/: CMakeLists.txt
neopz/Matrix/: CMakeLists.txt  TPZSYSMPSpooles.cpp  TPZYSMPMumps.h
neopz/Solvers/: CMakeLists.txt  TPZSpoolesSolver.cpp
neopz/StrMatrix/: CMakeLists.txt  TPZSSpStructMatrixMumps.h  TPZSSpStructMatrixSpooles.cpp  TPZSpStructMatrixMumps.h
neopz/cmake/: EnableMUMPS.cmake
pages/: solver_performance_results.csv  speedup_comparison_chart.html
